# vex

./: .coderabbit.yaml  .env.example  .envrc  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  flake.nix  pyproject.toml
.github/workflows/: ci.yml
app/: cli.py  config.py  db.py  main.py
app/auditor/: __init__.py  checks.py
app/importers/: archive.py  cc.py  store.py
app/pipeline/: agent_io.py  chunk_store.py  chunker.py  coref_store.py  coreference.py  embed_store.py  embedder.py  extractor.py  linker.py  maintenance.py  orchestrator.py  topic_boundary.py  validator.py
app/pipeline/prompts/: __init__.py  agent_extraction.md
app/routers/: __init__.py  admin.py  query.py  review.py  write.py
app/tools/: admin.py  persona.py  review.py  write.py
app/tools/query/: __init__.py  _common.py  boot.py  graph.py  lookup.py  recall.py  search.py
deploy/: mcphub-registration.json  rsync-cron.sh
migrations/: 001_initial_schema.sql  002_extraction_denylist.sql  003_persona.sql
seed/persona/: 01-identity.md  02-shane-profile.md  03-exec-function.md  04-interaction.md  05-protocols.md
tests/: conftest.py  test_agent_io.py  test_chunker.py  test_coreference.py  test_db.py  test_embedder.py  test_maintenance.py  test_neighbourhood.py  test_persona.py  test_topic_boundary.py  test_validator.py
tests/fixtures/: emotional_session.jsonl  golden_queries.json  sample_cc_session.jsonl  single_message_session.jsonl
tests/golden/: conftest.py  test_golden.py
